--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Luis's Website I dont know why youre here but im activly building this please wait until im done to vist</h1>
+        <h1>Hello! Thanks for visiting but this site is still a WIP! Check back soon!</h1>
     </header>
 
     <nav>
@@ -26,9 +26,7 @@
     <section id="projects">
         <h2>Projects</h2>
         <ul>
-            <li>Data Analysis of Sales Trends</li>
-            <li>Customer Segmentation using Machine Learning</li>
-            <li>Visualizing Financial Data with Tableau</li>
+            <li>Projects will be listed here are made availble</li>
         </ul>
     </section>
 
@@ -39,7 +37,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2023 Luis | Data Analytics</p>
+        <p>&copy; 2023 Luis | But like not really lol </p>
     </footer>
 </body>
 </html>
