--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section id="projects">
         <h2>Projects</h2>
         <ul>
-            <li>Projects will be listed here are made availble</li>
+            <li>Projects will be listed here as I complete them</li>
         </ul>
     </section>
 
@@ -37,7 +37,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2023 Luis | But like not really lol </p>
+        <p>&copy; 2023 Luis </p>
     </footer>
 </body>
 </html>
