--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <title>Luis - Data Analytics</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="java.js"></script>
+
 </head>
 <body>
     <header>
-        <h1>Hello! Thanks for visiting but this site is still a WIP! Check back soon!</h1>
+        <h1>Hello! Thanks for visiting, but this site is still a work in progress! Check back soon!</h1>
     </header>
 
     <nav>
         <ul>
             <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
@@ -20,13 +23,36 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>I'm Luis, a passionate data analytics enthusiast. I love exploring and extracting insights from data to drive informed decision-making.</p>
+        <p>I'm Luis, a passionate data analytics enthusiast. I thrive on exploring and extracting valuable insights from data to drive informed decision-making. My background includes programming, video editing, and hands-on experience in computer repair and building. I also manage my own Unraid server, troubleshoot hardware and network issues, and ensure seamless operations.</p>
     </section>
 
+    <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li><strong>Data Analytics:</strong> Proficient in data analysis, visualization, and deriving insights from complex datasets.</li>
+            <li><strong>Programming:</strong> Skilled in C#, Python, JavaScript, Lua, and R for various applications.</li>
+            <li><strong>Video Editing:</strong> Experienced in video production and editing for multimedia content creation.</li>
+            <li><strong>Computer Repair and Building:</strong> Adept at diagnosing and fixing hardware issues and building custom PC systems.</li>
+            <li><strong>Server Administration (Unraid):</strong> Manage Unraid server environments, troubleshoot hardware, and ensure smooth networking operations.</li>
+            <li><strong>Website Design:</strong> Proficient in creating visually appealing and user-friendly websites.</li>
+            <!-- Add more details or skills as needed -->
+        </ul>
+    </section>
+
+    <button id="toggleProjects">Show/Hide Projects</button>
     <section id="projects">
         <h2>Projects</h2>
+        <p>Stay tuned for exciting project updates!</p>
         <ul>
-            <li>Projects will be listed here as I complete them</li>
+            <li>
+                <h3>Project 1</h3>
+                <p>Description of project 1 goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </li>
+            <li>
+                <h3>Project 2</h3>
+                <p>Description of project 2 goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </li>
+            <!-- Add more projects with descriptions as needed -->
         </ul>
     </section>
 
@@ -35,9 +61,10 @@
         <p>Email: luis@example.com</p>
         <p>Phone: 123-456-7890</p>
     </section>
-
+    <div id="timer"></div>
     <footer>
-        <p>&copy; 2023 Luis </p>
+        <p>&copy; 2023 Luis | But like not really lol </p>
     </footer>
+
 </body>
 </html>
