--- a/Dietary Analysis and Optimization.html
+++ b/Dietary Analysis and Optimization.html
@@ -20,6 +20,7 @@
     </style>
 </head>
 <body>
+     <p><a href="index.html">Go back</a></p>
     <section id="introduction">
         <h1>Report: Dietary Analysis and Optimization</h1>
         <h2>Introduction</h2>
