--- a/Dietary Analysis and Optimization.html
+++ b/Dietary Analysis and Optimization.html
@@ -22,7 +22,7 @@
 <body>
      <p><a href="index.html">Go back</a></p>
     <section id="introduction">
-        <h1>Report: Dietary Analysis and Optimization</h1>
+        <h1>Report: Dietary Analysis and Optimization Version 1</h1>
         <h2>Introduction</h2>
         <p>For almost a year, I've been diligently tracking my dietary data using the Chronometer website. This data collection process is rooted in precision, as I measure everything I consume in grams. To enhance the accuracy and relevance of the data, I used R and R Studio for the analysis.</p>
     </section>
@@ -218,8 +218,8 @@
         <h2>Data Files Generated</h2>
         <p>In the process of this analysis, several data files were generated:</p>
         <ul>
-            <li>Daily Nutrient Averages (column_averages.csv): This file contains the average nutrient values for each column, helping to understand overall dietary trends.</li>
-            <li>RDA Input Template (RDA_input.csv): A CSV file with headers for manual input of Recommended Dietary Allowance (RDA) values for different nutrients.</li>
+            <li>Daily Nutrient Averages: This file contains the average nutrient values for each column, helping to understand overall dietary trends.</li>
+            <li>RDA Input Template: A CSV file with headers for manual input of Recommended Dietary Allowance (RDA) values for different nutrients.</li>
             <li><a href="https://public.tableau.com/views/NutritionalAnalysisandDietaryOptimization/Dashboard1?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link">Tableau Workbook</a>: Explore interactive visualizations and delve deeper into the nutritional analysis through our Tableau workbook.</li>            </ul>
     </section>
 </body>
